# gpu-monitor-otlp

./: main.py  pyproject.toml
scripts/: run_gpu_monitor_otlp.py  run_gpu_monitor_otlp.sh  setup_intranet_dns.sh  test_otlp.py
