[project]
name = "gpu-monitor-otlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-ml-py>=13.580.82",
    "openlit>=1.36.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "psutil>=7.1.3",
]
